# NeoChatTest

./: .gitignore  README.md  chat.html  github-callback.html  index.html  main.go  middleware_server.js  package-lock.json  registr.html  render.yaml  style.css
.github/workflows/: pages.yml
cpp-neural-network/: CMakeLists.txt  Makefile  README.md
cpp-neural-network/src/: api_server.cpp  arg_api.cpp  debug_api.cpp  fixed_api.cpp  main.cpp  smart_neural.cpp  transformer.cpp
neural-network/: .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile.web  Dockerfile.worker  Makefile  README.md  RENDER_DEPLOY.md  api_server.py  cuda_kernels.cu  cuda_kernels.h  deploy.ps1  deploy.sh  docker-compose.prod.yml  docker-compose.yml  go.mod  main.py  render.yaml  setup.py  start.sh  stop.sh
neural-network/docker/python/: Dockerfile
neural-network/go-service/: Dockerfile  go.mod  main.go
neural-network/monitoring/: prometheus.yml
neural-network/monitoring/grafana/dashboards/: dashboard.yml
neural-network/monitoring/logstash/config/: logstash.yml
neural-network/monitoring/logstash/pipeline/: logstash.conf
neural-network/monitoring/rules/: neural-network.yml  prometheus.yml
neural-network/nginx/: nginx.conf
neural-network/rust-service/: Cargo.toml  Dockerfile
neural-network/rust-service/src/: main.rs
neural-network/sql/: init.sql
neural-network/src/: __init__.py
neural-network/web-interface/: .eslintrc.js  Dockerfile  index.html  nginx.conf  vite.config.ts
neural-network/web-interface/src/: index.tsx
server/: .env  package-lock.json  package.json
server/prisma/: dev.db  schema.prisma
server/src/: index.js  start.js
