[package]
name = "neural-network-rust"
version = "1.0.0"
edition = "2021"
authors = ["Neural Network Team"]
description = "High-performance Rust service for neural network infrastructure"

[dependencies]
# Web framework
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"

# Async runtime
futures = "0.3"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "0.14", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tokio-postgres = "0.7"

# Caching and storage
redis = { version = "0.23", features = ["tokio-comp"] }
sled = "0.34"

# Serialization and encoding
bincode = "1.3"
base64 = "0.21"
hex = "0.4"

# Cryptography and security
ring = "0.17"
jsonwebtoken = "9.0"
argon2 = "0.5"

# Logging and monitoring
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Configuration
config = "0.13"
clap = { version = "4.0", features = ["derive"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
dashmap = "5.0"
parking_lot = "0.12"

# Memory management
jemallocator = "0.5"
crossbeam = "0.8"

# Networking
quinn = "0.10"
rustls = "0.21"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

